fixed navbar spacing

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -740,6 +740,17 @@ section {
 }
 
 @media only screen and (max-width:1152px) {
+	#primary-menu > ul > li > a > div, #primary-menu ul li > a {
+		font-weight:300;
+		font-family: Roboto Condensed;
+		font-size:13px;
+		padding-left:5px;
+		padding-right:5px;
+	}
+	#logo {
+		width:20%;
+		margin-right:0;
+	}
 
 }
 
